force-app/main/default/objects/PTAProducts__c/PTAProducts__c.object-meta.xml
<CustomObject>
    <label>Produto PTA</label>
    <nameField>
        <displayFormat>PTA-{000000}</displayFormat>
        <label>Produto PTA</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Produtos PTA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>