force-app/main/default/objects/PTAProducts__c/fields/Harvest__c.field-meta.xml
<CustomField>
    <fullName>Harvest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Safra</label>
    <referenceTo>Safra__c</referenceTo>
    <relationshipLabel>Produtos PTA</relationshipLabel>
    <relationshipName>Produtos_PTA</relationshipName>
    <type>Lookup</type>
</CustomField>