force-app/main/default/objects/PTAProducts__c/fields/PTAProduct__c.field-meta.xml
<CustomField>
    <fullName>PTAProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto PTA</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Produtos PTA</relationshipLabel>
    <relationshipName>Produtos_PTA</relationshipName>
    <type>Lookup</type>
</CustomField>