force-app/main/default/objects/PTAProducts__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Name</columns>
    <columns>Harvest__c</columns>
    <columns>PTAProduct__c</columns>
    <columns>SalesOrg__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>